[package]
name = "mscorlib-sys"
version = "0.1.3"
license = "MIT"
description = "Raw FFI bindings for mscorlib"
repository = "https://github.com/ZerothLaw/mscorlib-rs-sys"
readme = "README.md"
keywords = ["windows", "ffi", "com", "mscorlib"]
categories = ["external-ffi-bindings", "os::windows-apis"]
authors = ["Tyler Laing <trinioler@gmail.com>"]
build = "build.rs"
features = ["remoting"]

[dependencies]
winapi = { version = "0.3.5", features = ["oaidl", "winerror"]}

[build-dependencies]
cc = "1.0"